--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -727,7 +727,9 @@
     \end{enumerate}
 \end{definicion}
 
-\begin{ejemplo} En este caso, si consideramos la aplicación $p:\bb{R} \to \bb{S}^1$ descrita en la gráfica, que es claramente continua y sobreyectiva\footnote{de hecho es un homeomorfismo que estudiamos en Topología I} podemos ver que $O$, que contiene al $(1,0)$ está regularmente recubierto
+\begin{ejemplo} 
+    En este caso, si consideramos la aplicación $p:\bb{R} \to \bb{S}^1$ descrita en la gráfica, que es claramente continua y sobreyectiva\footnote{de hecho es un homeomorfismo que estudiamos en Topología I} podemos ver que $O$, que contiene al $(1,0)$ está regularmente recubierto
+
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}
@@ -830,7 +832,59 @@
     \end{align*}
     es recubridora. Intuitivamente la podemos ver como\\
 
-    [Insertar gráfica]\\
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \shorthandoff{>}
+
+            % Aplicación p
+            \node at (0,0.5) {$p$};
+            \draw[thick,->] (-0.5,0) -- (0.5,0);
+
+            % Circunferencia 1
+            \draw[thick] (-3,0) circle [radius=1.5];
+            \draw[blue, line width=2pt] (-1.5,0) arc (0:45:1.5);
+            \draw[blue, line width=2pt] (-4.5,0) arc (180:225:1.5);
+            
+            \node[blue] at (-1.3,1) {$A_1$};
+            \node[blue] at (-4.8,-1) {$A_2$};
+
+            % Ejes 1
+            \draw[thick] (-3,-2) -- (-3,2);
+            \draw[thick] (-5,-0) -- (-1,0);
+            \draw[rotate around={45:(-3,0)}, dashed] (-5,-0) -- (-1,0);
+
+            \draw[thick, green!60!black, rotate around={30:(-3,0)}] (-3,0) -- (-1.5,0);
+            \draw[thick, red, rotate around={100:(-3,0)}] (-3,0) -- (-1.5,0);
+
+            \draw[green!60!black, thick] (-2.5,0) arc (0:30:0.5);
+            \draw[red, thick] (-2.7,0) arc (0:100:0.3);
+
+            \node[green!60!black] at (-2,0.25) {$\theta$};
+            \node[red] at (-2.75,1) {$\phi$};
+
+            % Circunferencia 2
+            \draw[thick] (3,0) circle [radius=1.5];
+            \draw[blue, line width=2pt] (4.5,0) arc (0:90:1.5);
+
+            \node[blue] at (4.4,1.4) {$O$};
+
+            % Ejes 2
+            \draw[thick] (3,-2) -- (3,2);
+            \draw[thick] (1,-0) -- (5,0);
+
+            \draw[thick, green!60!black, rotate around={60:(3,0)}] (3,0) -- (4.5,0);
+            \draw[thick, red, rotate around={200:(3,0)}] (3,0) -- (4.5,0);
+
+            \draw[green!60!black, thick] (3.5,0) arc (0:60:0.5);
+            \draw[red, thick] (3.3,0) arc (0:200:0.3);
+
+            \node[green!60!black] at (3.75,0.5) {$2\theta$};
+            \node[red] at (2.5,0.5) {$2\phi$};
+            
+
+        \end{tikzpicture}%
+    \end{figure}%
 
     Esta aplicación se podría generalizar como 
     \begin{align*}
