--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -928,7 +928,42 @@
         \end{align*}
         es una aplicación recubridora. Intuitivamente podemos entenderlo de forma gráfica como \\
 
-        [Insertar gráfica]
+        \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \shorthandoff{>}
+
+            % Ejes
+            \draw[thick] (-4,-2) -- (-4,2); 
+            \draw[thick] (-6,0) -- (-2,0);
+            \node at (-4,2.5) {$\bb{S}^1\times \bb{R}$};
+
+            % Líneas 1
+            \draw[thick, red] (-3.2,-2) -- (-3.2,2);
+            \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
+
+            % Función p
+            \draw[thick, ->] (-0.5,0) -- (0.5,0);
+            \node at (0,0.5) {$p_1\times p_2$};
+
+            % Cilindro
+            \draw[thick] (2,-2) -- (2,2);
+            \draw[thick] (4,-2) -- (4,2);
+
+            \draw[dashed, thick] (3,1.5) ellipse (1 and 0.3);
+            \draw[dashed, thick] (3,-1.5) ellipse (1 and 0.3);
+
+            \node at (3, 2.5) {$\bb{S}^1\times \bb{R}$};
+
+            % Líneas 2
+            \draw[thick, red] (3.5,-2) -- (3.5,2);
+
+            \draw[blue, thick] (4,0) arc (0:-180:1 and 0.3);
+            \draw[blue, dashed, thick] (4,0) arc (0:180:1 and 0.3);
+            
+
+        \end{tikzpicture}%
+    \end{figure}%
 
         \item $\bb{R}^2$ es un recubridor del toro $\bb{S}^1\times \bb{S}^1$ de $\bb{R}^4$ (o el toro de rotación de $\bb{R}^3$ porque ambos toros son homeomorfos). Para ello consideramos 
         \begin{align*}
@@ -942,8 +977,50 @@
         \end{align*}
         que sería la aplicación recubridora. Intuitivamente podemos entenderlo de forma gráfica como \\
 
-        [Insertar gráfica]
+        \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \shorthandoff{>}
 
+            % Ejes
+            \draw[thick] (-4,-2) -- (-4,2); 
+            \draw[thick] (-6,0) -- (-2,0);
+            \node at (-4,2.5) {$\bb{S}^1\times \bb{R}$};
+
+            % Líneas 1
+            \draw[thick, red] (-3.2,-2) -- (-3.2,2);
+            \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
+
+            % Función p
+            \draw[thick, ->] (-0.5,0) -- (0.5,0);
+            \node at (0,0.5) {$p\times p$};
+
+            % Líneas 2
+            \draw[thick, blue, dashed] (7.97,0.2) arc (0:180:2.97 and 1.3);
+            \draw[thick, red, dashed] (5.5, -1.96) arc (-90:-270:0.2 and 0.98);
+            \draw[thick, blue] (7.97,0.2) arc (0:-180:2.97 and 1.3);
+            \draw[thick, red] (5.5, -1.96) arc (-90:90:0.2 and 0.98);
+
+
+            % Toro
+            \draw[thick] (5,0) ellipse (3 and 2);
+            \draw[thick] (3.76,0.32) arc (225:315:1.75 and 1.25);
+            % \draw[blue] (5,1) ellipse (1.75 and 1.25);
+            \draw[thick] (5.86,0.12) arc (30:150:1 and 0.5);
+            % \draw[red] (5,-0.2) ellipse (1 and 0.5);
+
+            % \draw[thick, blue] (7.9,0.5) arc (0:-360:2.8 and 2.25);
+
+            % \draw[thick, blue] (5,0.2) ellipse (2.97 and 1.3);
+            % \draw[thick, red] (5.5, -0.98) ellipse (0.2 and 0.98);
+
+            \node at (5,2.5) {$\bb{S}^1 \times \bb{S}^1$};
+            
+            
+            
+
+        \end{tikzpicture}%
+    \end{figure}%
     \end{enumerate}
 \end{ejemplo}
 
