--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -985,7 +985,7 @@
             % Ejes
             \draw[thick] (-4,-2) -- (-4,2); 
             \draw[thick] (-6,0) -- (-2,0);
-            \node at (-4,2.5) {$\bb{S}^1\times \bb{R}$};
+            \node at (-4,2.5) {$\bb{R}\times \bb{R}$};
 
             % Líneas 1
             \draw[thick, red] (-3.2,-2) -- (-3.2,2);
