--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -929,41 +929,41 @@
         es una aplicación recubridora. Intuitivamente podemos entenderlo de forma gráfica como \\
 
         \begin{figure}[H]
-        \centering
-        \begin{tikzpicture}
-            \shorthandoff{>}
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
 
-            % Ejes
-            \draw[thick] (-4,-2) -- (-4,2); 
-            \draw[thick] (-6,0) -- (-2,0);
-            \node at (-4,2.5) {$\bb{S}^1\times \bb{R}$};
+                % Ejes
+                \draw[thick] (-4,-2) -- (-4,2); 
+                \draw[thick] (-6,0) -- (-2,0);
+                \node at (-4,2.5) {$\bb{R}^2$};
 
-            % Líneas 1
-            \draw[thick, red] (-3.2,-2) -- (-3.2,2);
-            \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
+                % Líneas 1
+                \draw[thick, red] (-3.2,-2) -- (-3.2,2);
+                \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
 
-            % Función p
-            \draw[thick, ->] (-0.5,0) -- (0.5,0);
-            \node at (0,0.5) {$p_1\times p_2$};
+                % Función p
+                \draw[thick, ->] (-0.5,0) -- (0.5,0);
+                \node at (0,0.5) {$p_1\times p_2$};
 
-            % Cilindro
-            \draw[thick] (2,-2) -- (2,2);
-            \draw[thick] (4,-2) -- (4,2);
+                % Cilindro
+                \draw[thick] (2,-2) -- (2,2);
+                \draw[thick] (4,-2) -- (4,2);
 
-            \draw[dashed, thick] (3,1.5) ellipse (1 and 0.3);
-            \draw[dashed, thick] (3,-1.5) ellipse (1 and 0.3);
+                \draw[dashed, thick] (3,1.5) ellipse (1 and 0.3);
+                \draw[dashed, thick] (3,-1.5) ellipse (1 and 0.3);
 
-            \node at (3, 2.5) {$\bb{S}^1\times \bb{R}$};
+                \node at (3, 2.5) {$\bb{S}^1\times \bb{R}$};
 
-            % Líneas 2
-            \draw[thick, red] (3.5,-2) -- (3.5,2);
+                % Líneas 2
+                \draw[thick, red] (3.5,-2) -- (3.5,2);
 
-            \draw[blue, thick] (4,0) arc (0:-180:1 and 0.3);
-            \draw[blue, dashed, thick] (4,0) arc (0:180:1 and 0.3);
-            
+                \draw[blue, thick] (4,0) arc (0:-180:1 and 0.3);
+                \draw[blue, dashed, thick] (4,0) arc (0:180:1 and 0.3);
+                
 
-        \end{tikzpicture}%
-    \end{figure}%
+            \end{tikzpicture}%
+        \end{figure}%
 
         \item $\bb{R}^2$ es un recubridor del toro $\bb{S}^1\times \bb{S}^1$ de $\bb{R}^4$ (o el toro de rotación de $\bb{R}^3$ porque ambos toros son homeomorfos). Para ello consideramos 
         \begin{align*}
@@ -1014,15 +1014,93 @@
             % \draw[thick, blue] (5,0.2) ellipse (2.97 and 1.3);
             % \draw[thick, red] (5.5, -0.98) ellipse (0.2 and 0.98);
 
-            \node at (5,2.5) {$\bb{S}^1 \times \bb{S}^1$};
+            \node at (5,2.5) {$\bb{S}^1 \times \bb{S}^1$};            
+
+        \end{tikzpicture}%
+    \end{figure}%
+
+    \item \ [Insertar gráfica]
+        
+    \item \ [Insertar gráfica]
+    
+    \end{enumerate}
+\end{ejemplo}
+
+\section{Levantamientos en espacios recubridores}
+
+\begin{definicion}
+    Sean $p:R\to B$ una aplicación recubridora y $f:X\to B$ una aplicación continua. Decimos que $\hat{f}:X\to R$ es un \textbf{levantamiento} de $f$ si se cumple que $\hat{f}$ es continua y $p\circ \hat{f} = f$. 
+\end{definicion}
+
+\begin{ejemplo}
+    Consideramos la aplicación recubridora
+    \begin{align*}
+        p:\bb{R} & \to \bb{S}^1\\
+        x & \mapsto (\cos(2\pi x), \sen(2\pi x))
+    \end{align*}
+    y tomamos
+    \begin{align*}
+        \alpha: [0,1] & \to \bb{S}^1\\
+        s & \mapsto (\cos(2\pi s), \sen(2\pi s))
+    \end{align*}
+    Si elegimos
+    \begin{align*}
+        \hat{\alpha} : [0,1] \to \bb{R}\\
+        s & \mapsto s
+    \end{align*}
+    es claro que $p\circ \hat{\alpha} = \alpha$. Otros posibles levantamientos de $\alpha$ son 
+    \begin{align*}
+        \hat{\alpha}_k : [0,1] & \to \bb{R}\ \ \ \ , k\in \bb{Z}  \\
+        s & \mapsto k+s
+    \end{align*}
+    
+    Nos planteamos ahora cuál sería un levantamiento de $\tilde{\alpha}(s) = \alpha(1-s)$. Podemos ver que $\hat{\tilde{\alpha}}_k(s) = k-s$ para $k\in \bb{Z}$ es en efecto un levantamiento de $\tilde{\alpha}(s)$.\\
+
+    [Terminar Gráfica]
+
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \shorthandoff{>}
+
+            % Ejes
+            \draw[thick] (-4,-2) -- (-4,2); 
+            \draw[thick] (-6,0) -- (-2,0);
+            \node at (-4,2.5) {$\bb{R}^2$};
+
+            % Líneas 1
             
-            
+
+            % Función p
+            \draw[thick, ->] (-0.5,0) -- (0.5,0);
+            \node at (0,0.5) {$p$};
+
+            % Cilindro
+            \draw[thick] (2,-2) -- (2,2);
+            \draw[thick] (4,-2) -- (4,2);
+
+            \draw[dashed, thick] (3,1.5) ellipse (1 and 0.3);
+            \draw[dashed, thick] (3,-1.5) ellipse (1 and 0.3);
+
+            \node at (3, 2.5) {$\bb{S}^1\times \bb{R}$};
+
+            % Líneas 2
+            \draw[blue, thick] (4,0) arc (0:-180:1 and 0.3);
+            \draw[blue, dashed, thick] (4,0) arc (0:180:1 and 0.3);
             
 
         \end{tikzpicture}%
     \end{figure}%
-    \end{enumerate}
+
 \end{ejemplo}
+
+\begin{lema}
+    Sean $p:R\to B$ una aplicación recubridora, $r_0\in R$ y $b_0\in B$ tales que $p(r_0)=b_0$. Entonces dado un arco $\alpha:[0,1]\to B$ con $\alpha(0)=b_0$, exisste un único arco $\hat{\alpha};[0,1]\to R$ tal que $\hat{\alpha}(0) = r_0$ y $\hat{\alpha}$ es un levantamiento de $\alpha$.
+
+    \begin{proof}
+        
+    \end{proof}
+\end{lema}
 
 
 
