--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1102,7 +1102,7 @@
         \begin{gather*}
             \alpha([0,1]) \subseteq O_{b_1} \cup O_{b_2}\cup \dots \cup O_{b_n}
         \end{gather*}
-        Entonces $[0,1]\subseteq p^{-1}( O_{b_1}) \cup p^{-1}(O_{b_2})\cup \dots \cup p^{-1}(O_{b_n})$ por lo que tendremos el intervalo $[0,1]$ recubierto por una familia finita de abiertos. Por el lema del número de Lebesgue\footnote{visto probablemente en alguna asignatura de Análisis} sabemos que existe un $\delta>0$ tal que para cada $x\in[0,1]$ se tiene que $B(x,\delta)\cap[0,1]$ está contenido en algún $p^{-1}(O_{b_j})$ para cierto $j\in\{1,\dots,k\}$. Esto nos asegura que podemos hacer una subdivisión del intervalo $[0,1]$ tal que
+        Entonces $[0,1]\subseteq p^{-1}( O_{b_1}) \cup p^{-1}(O_{b_2})\cup \dots \cup p^{-1}(O_{b_n})$ por lo que tendremos el intervalo $[0,1]$ recubierto por una familia finita de abiertos. Por el lema del número de Lebesgue\footnote{visto probablemente en alguna asignatura de Análisis.} sabemos que existe un $\delta>0$ tal que para cada $x\in[0,1]$ se tiene que $B(x,\delta)\cap[0,1]$ está contenido en algún $p^{-1}(O_{b_j})$ para cierto $j\in\{1,\dots,k\}$. Esto nos asegura que podemos hacer una subdivisión del intervalo $[0,1]$ tal que
         \begin{gather*}
             0 = t_0 < t_1 < \dots < t_{r-1} < t_r = 1
         \end{gather*}
@@ -1115,6 +1115,38 @@
             p^{-1}(O_{b_l}) = \bigcup\limits_{i\in I} A_i\ \ \text{ unión disjunta de abiertos}\\
             p_{|A_i}: A_i \to O_{b_l} \text{ es homeomorfismo}
        \end{gather*}
+
+       Como $r_0\in p^{-1}(b_0) = p^{-1}(\alpha(0)) \subseteq p^{-1}(O_{b_l}) = \bigcup\limits_{i\in I}A_i$ se tiene que $r_0\in A_{i_0}$ para algún $A_{i_0}$ con $i_0\in I$. Como además $p_{|A_{i_0}}:A_{i_0} \to O_{b_l}$ es un homeomorfismo, podemos definir
+       \begin{gather*}
+            \hat{\alpha}(t) = (p_{|A_{i_0}})^{-1}(\alpha(t)),\ \ \ t\in [0=t_0, t_1]
+       \end{gather*}
+       Es claro que $\hat{\alpha}$ en $[0,t_1]$ es continua y $p\circ\hat{\alpha}=\alpha$.\\
+
+       Para definir $\hat{\alpha}$ en $[t_1,t_2]$ repetimos el mismo procedimiento. Sabemos que $\alpha([t_1,t_2])$ cae en un abierto $O_{b_m}$ que está regularmente recubierto.
+       \begin{gather*}
+            p^{-1}(O_{b_m}) = \bigcup\limits_{i\in I'} A'_i\ \ \ \text{ con $A'_i$ abiertos disjuntos}\\
+            p_{|A'_i} : A'_i \to O_{b_m} \text{ homeomorfismo}
+       \end{gather*}
+       Además tenemos que $\alpha(t_1)\in O_{b_m}$. Como $p(\hat{\alpha}(t_1)) = \alpha(t_1)\in O_{b_m}$, entonces $\hat{\alpha}(t_1)\in p^{-1}(O_{b_m})$ y por tanto $\exists i'_0$ tal que $\hat{\alpha}(t_1)\in A'_{i'_0}$. Como $p_{|A'_{i'_0}}:A'_{i'_0}:O_{b_m}$ es un homeomorfismo, podemos definir $\hat{\alpha}$ en $[t_1,t_2]$ como 
+       \begin{gather*}
+            \hat{\alpha}(t) = (p_{|A'_{i'_0}})^{-1}(\alpha(t))    
+       \end{gather*}
+       que es claramente contina y $(p\circ \hat{\alpha})(t)=\alpha(t)$ para $t\in [t_1,t_2]$. Por el lema de pegado tenemos que $\hat{\alpha}$ es continua en $[t_0,t_2]$. Siguiendo este procedimiento con cada $t_i$, $i\in\{0,\dots,r-1\}$ tendremos el resultado que buscábamos probar.\\
+
+       Veamos ahora por qué $\hat{\alpha}$ es única con $\hat{\alpha}(0)=r_0$. Si existiese otro arco $\alpha^*:[0,1]\to R$ tal que $p\circ \hat{\alpha} = p\circ \alpha^*$ con $\hat{\alpha}(0) = r_0 = \alpha^*(0)$, entonces 
+       \begin{gather*}
+            \alpha([0=t_0,t_1]) \subset O_{b_l}
+       \end{gather*}
+       por lo que 
+       \begin{gather*}
+            \alpha^*([0,t_1]) \subseteq p^{-1}(O_{b_l}) = \bigcup\limits_{i\in I} A_i\\
+            \hat{\alpha}([0,t_1]) \subseteq p^{-1}(O_{b_l}) = \bigcup\limits_{i\in I} A_i
+       \end{gather*}
+       Por continuidad, $\alpha^*([0,t_1])\subseteq A_{i_1}$ y $\hat{\alpha}([0,t_1])\subseteq A_{i_0}$ pero $\alpha^*(0)=r_0=\hat{\alpha}(0)\in A_{i_0}$ y como los $A_i$ son disjuntos tenemos que $A_{i_1} = A_{i_0}$. Además, $p_{|A_{i_0}}$ es homeomorfismo de $A_{i_0}$ en $O_{b_l}$ por lo que 
+       \begin{gather*}
+            \alpha^*(t) = \hat{\alpha}(t),\ \ \ t\in [0,1]
+       \end{gather*}
+       De forma recursiva se verifica la unicidad en todos los intervalos $[t_j, t_j+1]$ con $j\in \{0,\dots,r-1\}$.
     \end{proof}
 \end{lema}
 
