--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1146,7 +1146,7 @@
        \begin{gather*}
             \alpha^*(t) = \hat{\alpha}(t),\ \ \ t\in [0,1]
        \end{gather*}
-       De forma recursiva se verifica la unicidad en todos los intervalos $[t_j, t_j+1]$ con $j\in \{0,\dots,r-1\}$.
+       De forma recursiva se verifica la unicidad en todos los intervalos $[t_j, t_{j+1}]$ con $j\in \{0,\dots,r-1\}$.
     \end{proof}
 \end{lema}
 
