--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -978,51 +978,114 @@
         que sería la aplicación recubridora. Intuitivamente podemos entenderlo de forma gráfica como \\
 
         \begin{figure}[H]
-        \centering
-        \begin{tikzpicture}
-            \shorthandoff{>}
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
 
-            % Ejes
-            \draw[thick] (-4,-2) -- (-4,2); 
-            \draw[thick] (-6,0) -- (-2,0);
-            \node at (-4,2.5) {$\bb{R}\times \bb{R}$};
+                % Ejes
+                \draw[thick] (-4,-2) -- (-4,2); 
+                \draw[thick] (-6,0) -- (-2,0);
+                \node at (-4,2.5) {$\bb{R}\times \bb{R}$};
 
-            % Líneas 1
-            \draw[thick, red] (-3.2,-2) -- (-3.2,2);
-            \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
+                % Líneas 1
+                \draw[thick, red] (-3.2,-2) -- (-3.2,2);
+                \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
 
-            % Función p
-            \draw[thick, ->] (-0.5,0) -- (0.5,0);
-            \node at (0,0.5) {$p\times p$};
+                % Función p
+                \draw[thick, ->] (-0.5,0) -- (0.5,0);
+                \node at (0,0.5) {$p\times p$};
 
-            % Líneas 2
-            \draw[thick, blue, dashed] (7.97,0.2) arc (0:180:2.97 and 1.3);
-            \draw[thick, red, dashed] (5.5, -1.96) arc (-90:-270:0.2 and 0.98);
-            \draw[thick, blue] (7.97,0.2) arc (0:-180:2.97 and 1.3);
-            \draw[thick, red] (5.5, -1.96) arc (-90:90:0.2 and 0.98);
+                % Líneas 2
+                \draw[thick, blue, dashed] (7.97,0.2) arc (0:180:2.97 and 1.3);
+                \draw[thick, red, dashed] (5.5, -1.96) arc (-90:-270:0.2 and 0.98);
+                \draw[thick, blue] (7.97,0.2) arc (0:-180:2.97 and 1.3);
+                \draw[thick, red] (5.5, -1.96) arc (-90:90:0.2 and 0.98);
 
 
-            % Toro
-            \draw[thick] (5,0) ellipse (3 and 2);
-            \draw[thick] (3.76,0.32) arc (225:315:1.75 and 1.25);
-            % \draw[blue] (5,1) ellipse (1.75 and 1.25);
-            \draw[thick] (5.86,0.12) arc (30:150:1 and 0.5);
-            % \draw[red] (5,-0.2) ellipse (1 and 0.5);
+                % Toro
+                \draw[thick] (5,0) ellipse (3 and 2);
+                \draw[thick] (3.76,0.32) arc (225:315:1.75 and 1.25);
+                % \draw[blue] (5,1) ellipse (1.75 and 1.25);
+                \draw[thick] (5.86,0.12) arc (30:150:1 and 0.5);
+                % \draw[red] (5,-0.2) ellipse (1 and 0.5);
 
-            % \draw[thick, blue] (7.9,0.5) arc (0:-360:2.8 and 2.25);
+                % \draw[thick, blue] (7.9,0.5) arc (0:-360:2.8 and 2.25);
 
-            % \draw[thick, blue] (5,0.2) ellipse (2.97 and 1.3);
-            % \draw[thick, red] (5.5, -0.98) ellipse (0.2 and 0.98);
+                % \draw[thick, blue] (5,0.2) ellipse (2.97 and 1.3);
+                % \draw[thick, red] (5.5, -0.98) ellipse (0.2 and 0.98);
 
-            \node at (5,2.5) {$\bb{S}^1 \times \bb{S}^1$};            
+                \node at (5,2.5) {$\bb{S}^1 \times \bb{S}^1$};            
 
-        \end{tikzpicture}%
-    \end{figure}%
+            \end{tikzpicture}%
+        \end{figure}%
 
-    \item \ [Insertar gráfica]
+        \item Intiutivamente podemos pensar en el recubrimiento de una circunferencia tangente a una recta como una colección de rectas paralelas y atravesadas por una común, como aparece en la figura. De esta forma (tal cual está en el dibujo) al ``enrollar'' el eje $x$ de forma que hagamos coincidir todas las rectas rojas tendremos que la recta azul forma una circunferencia, que como originalmente solo tocaba en un punto a cada recta, resultará en la circunferencia tangente a la recta.
         
-    \item \ [Insertar gráfica]
-    
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+
+                % Ejes
+                \draw[thick] (-4,-2) -- (-4,2); 
+                \draw[thick] (-6,0) -- (-2,0);
+                \node at (-4,2.5) {$\bb{R}^2$};
+
+                % Líneas 1
+                \draw[thick, red] (-5.2,-2) -- (-5.2,2);
+                \draw[thick, red] (-4.2,-2) -- (-4.2,2);
+                \draw[thick, red] (-3.2,-2) -- (-3.2,2);
+                \draw[thick, red] (-2.2,-2) -- (-2.2,2);
+
+                \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
+
+                % Función p
+                \draw[thick, ->] (-0.5,0) -- (0.5,0);
+                \node at (0,0.5) {$p$};
+
+                % Líneas 2
+                \draw[thick, red] (2,-1.5) -- (8,-1.5);
+
+                \draw[blue, thick] (5,0) circle [radius=1.5];
+
+
+            \end{tikzpicture}%
+        \end{figure}%
+            
+        \item Por último podemos plantearnos cómo podría ser el recubrimiento de dos circunferencias tangentes. Para ello, tal como aparece en la figura podremos usar una \textbf{cuadrícula}. De forma análoga al ejemplo anterior podremos ``enrollar'' en primer lugar el eje $x$ y obtendremos una única recta roja tangente a infinitas circunferencias azules (como en el ejemplo anterior pero con las circunferencias azules periódicas). Ahora podremos ``enrollar'' la propia recta roja, haciendo coincidir todas las circunferencias azules de forma que obtendremos las dos circunferencias tangentes.
+        
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+
+                % Ejes
+                \draw[thick] (-4,-2) -- (-4,2); 
+                \draw[thick] (-6,0) -- (-2,0);
+                \node at (-4,2.5) {$\bb{R}^2$};
+
+                % Líneas 1
+                \draw[thick, red] (-5.2,-2) -- (-5.2,2);
+                \draw[thick, red] (-4.2,-2) -- (-4.2,2);
+                \draw[thick, red] (-3.2,-2) -- (-3.2,2);
+                \draw[thick, red] (-2.2,-2) -- (-2.2,2);
+
+                \draw[thick, blue] (-6, -1.5) -- (-2,-1.5);
+                \draw[thick, blue] (-6, -0.5) -- (-2,-0.5);
+                \draw[thick, blue] (-6, 0.5) -- (-2,0.5);
+                \draw[thick, blue] (-6, 1.5) -- (-2,1.5);
+
+                % Función p
+                \draw[thick, ->] (-0.5,0) -- (0.5,0);
+                \node at (0,0.5) {$p$};
+
+                % Líneas 2
+                \draw[blue, thick] (3.5,0) circle [radius=1.5];
+                \draw[red, thick] (6.5,0) circle [radius=1.5];
+
+
+            \end{tikzpicture}%
+        \end{figure}%
     \end{enumerate}
 \end{ejemplo}
 
