--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1019,7 +1019,7 @@
             \end{tikzpicture}%
         \end{figure}%
 
-        \item Intiutivamente podemos pensar en el recubrimiento de una circunferencia tangente a una recta como una colección de rectas paralelas y atravesadas por una común, como aparece en la figura. De esta forma (tal cual está en el dibujo) al ``enrollar'' el eje $x$ de forma que hagamos coincidir todas las rectas rojas tendremos que la recta azul forma una circunferencia, que como originalmente solo tocaba en un punto a cada recta, resultará en la circunferencia tangente a la recta.
+        \item Intiutivamente podemos pensar en un recubrimiento de una circunferencia tangente a una recta como una colección de rectas paralelas y atravesadas por una común, como aparece en la figura. De esta forma (tal cual está en el dibujo) al ``enrollar'' el eje $x$ de forma que hagamos coincidir todas las rectas rojas tendremos que la recta azul forma una circunferencia, que como originalmente solo tocaba en un punto a cada recta, resultará en la circunferencia tangente a la recta.
         
         \begin{figure}[H]
             \centering
@@ -1052,7 +1052,7 @@
             \end{tikzpicture}%
         \end{figure}%
             
-        \item Por último podemos plantearnos cómo podría ser el recubrimiento de dos circunferencias tangentes. Para ello, tal como aparece en la figura podremos usar una \textbf{cuadrícula}. De forma análoga al ejemplo anterior podremos ``enrollar'' en primer lugar el eje $x$ y obtendremos una única recta roja tangente a infinitas circunferencias azules (como en el ejemplo anterior pero con las circunferencias azules periódicas). Ahora podremos ``enrollar'' la propia recta roja, haciendo coincidir todas las circunferencias azules de forma que obtendremos las dos circunferencias tangentes.
+        \item Por último podemos plantearnos cómo podría ser un recubrimiento de dos circunferencias tangentes. Para ello, tal como aparece en la figura podremos usar una \textbf{cuadrícula}. De forma análoga al ejemplo anterior podremos ``enrollar'' en primer lugar el eje $x$ y obtendremos una única recta roja tangente a infinitas circunferencias azules (como en el ejemplo anterior pero con las circunferencias azules periódicas). Ahora podremos ``enrollar'' la propia recta roja, haciendo coincidir todas las circunferencias azules de forma que obtendremos las dos circunferencias tangentes.
         
         \begin{figure}[H]
             \centering
