--- a/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_0.tex
@@ -954,6 +954,8 @@ Que $g$ sea continua es equivalente a decir que $|g(x)| \leq k \|x\|$ para todo 
     Se recomienda ver este lema y su demostración en el libro de Brezis.
 \end{observacion}
 
+% Corolario 2.3, Corolario 2.4, Corolario 2.5 ya los podemos hacer como ejercicios y mañana se presentarán en clase
+
 
 
 
