--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1298,9 +1298,103 @@
     \begin{proof}
         Si $R$ es arcoconexo tenemos que probar que dado $r_1\in p^{-1}(b_0)\subseteq R$ existe un lazo $\alpha:[0,1]\to B$ de forma que $\phi([\alpha]) = r_1$, es decir, su único levantamiento $\hat{\alpha}:[0,1]\to R$ cumple que $\hat{\alpha}(0) = r_0$ y $\hat{\alpha}(1) = r_1$.\\
 
-        Para ello tomo un arco cualquiera $\alpha^*:[0,1]\to R$ tal que $\alpha^*(0) = r_0$ y $\alpha^*(1) = r_1$ que existe por ser $R$ arcoconexo. Elijo ahora $\alpha = p\circ \alpha^*$ que es un arco en $B$ tal que $\alpha(0)= p(\alpha^*(0)) = p(r_0) = b_0$ y $\alpha(1) = p(\alpha^*(1)) = p(r_1) = b_0$. Tenemos entonces que $\alpha$ es un lazo basado en $b_0$ y como $\alpha=p\circ \alpha^*$, entonces $\hat{\alpha} = \alpha^*$ es un levantamiento de $\alpha$ con $\hat{\alpha}(0) = \alpha^*(0) = r_0$ por lo que $\phi([\alpha]) = \hat{\alpha}(1) = \alpha^*(1) = r_1$.
+        Para ello tomo un arco cualquiera $\alpha^*:[0,1]\to R$ tal que $\alpha^*(0) = r_0$ y $\alpha^*(1) = r_1$ que existe por ser $R$ arcoconexo. Elijo ahora $\alpha = p\circ \alpha^*$ que es un arco en $B$ tal que $\alpha(0)= p(\alpha^*(0)) = p(r_0) = b_0$ y $\alpha(1) = p(\alpha^*(1)) = p(r_1) = b_0$. Tenemos entonces que $\alpha$ es un lazo basado en $b_0$ y como $\alpha=p\circ \alpha^*$, entonces $\hat{\alpha} = \alpha^*$ es un levantamiento de $\alpha$ con $\hat{\alpha}(0) = \alpha^*(0) = r_0$ por lo que $\phi([\alpha]) = \hat{\alpha}(1) = \alpha^*(1) = r_1$.\\
+
+        Nos queda ver que si $R$ es simplemente conexo, entonces $\phi$ es biyectiva. Como todo simplemente conexo es necesariamente arcoconexo sabemos de la primera parte del teorema que $\phi$ es sobreyectiva por lo que solo tenemos que probar la inyectividad. Eso es equivalente a considerar $[\alpha],[\beta]\in \pi_1(B,b_0)$ y ver si se verifica la implicación
+        \begin{gather*}
+             \phi([\alpha]) = \phi([\beta]) \overset{?}{\Rightarrow} [\alpha]=[\beta]
+        \end{gather*}
+        Sabiendo que $\hat{\alpha}(1) = \phi([\alpha])$ y $\hat{\beta}(1) = \phi([\beta])$. Como $\hat{\alpha}(1)=\hat{\beta}(1)$ consideramos $\hat{\alpha} \ast \hat{\beta}$ que es un lazo basado en $r_0$. Como $R$ es simplemente conexo tenemos que
+        \begin{gather*}
+            [\hat{\alpha}] \ast [\hat{\beta}] = [\hat{\alpha} \ast \hat{\beta}] = [\veps_{r_0}]
+        \end{gather*}
+        por lo que se tiene 
+        \begin{gather*}
+            [\hat{\alpha}] = [\veps_{r_0}] \ast [\hat{\beta}] = [\hat{\beta}]
+        \end{gather*}
+        Usando $p_*$ tenemos que
+        \begin{gather*}
+            p_*([\hat{\alpha}]) = [p\circ \hat{\alpha}] = [\alpha]\\
+            p_*([\hat{\beta}]) = [p\circ \hat{\beta}] = [\beta]
+        \end{gather*}
+        y como $p_*([\hat{\alpha}]) = p_*([\hat{\beta}])$ llegamos a que $[\alpha] = [\beta]$ como queríamos demostrar.
     \end{proof}
 \end{teo}
 
+\section{Grupo fundamental de la circuferencia}
 
+\begin{definicion}
+    Dado un lazo $\alpha:[0,1]\to \bb{S}^1 \subseteq \bb{R}^2$ basado en $(1,0)$, definimos el grado de $\alpha$ como el único número entero $\hat{\alpha}(1)$ dado por el levantamiento $\hat{\alpha}$ de $\alpha$ mediante la aplicación recubridora
+    \begin{gather*}
+        p(x) = (\cos(2\pi x), \sen(2\pi x))\ \ \ \ , \text{con }\hat{\alpha}(0) \neq 0
+    \end{gather*}
+    Notaremos al grado de $\alpha$ como $\deg(\alpha)$
+\end{definicion}
+
+\begin{observacion}
+    Como el grado es simplemente la correspondencia del levantamiento para $p$ y $r_0=0$, entonces si $[\alpha]=[\beta]$ se tiene que $\deg(\alpha)=\deg(\beta)$, es decir el grado está bien definido para clases de equivalencia.
+\end{observacion}
+
+\begin{teo}
+    El grupo fundamental de $\bb{S}^1$ en el $(1,0)$ es isomorfo al grupo aditivo $(\bb{Z}, +)$. De hecho, la aplicación
+    \begin{align*}
+        \deg: \pi_1(\bb{S}^1, (1,0)) &\to \bb{Z}\\
+        [\alpha] & \mapsto \deg(\alpha)
+    \end{align*}
+    es un isomorfismo de grupos.
+
+    \begin{proof}
+        Como $\bb{R}$ es simplemente conexo, el teorema anterior nos dice que  la aplicación $\deg$ es biyectiva. Tendremos que probar que $\deg$ es un homomorfismo, es decir que se verifica
+        \begin{gather*}
+            \deg([\alpha] \ast [\beta]) = \deg([\alpha]) + \deg([\beta])
+        \end{gather*}
+        Para verlo tomamos $\hat{\alpha}$, $\hat{\beta}$ levantamientos de $\alpha$ y $\beta$ respectivamente con 
+        \begin{gather*}
+            \hat{\alpha}(0) = 0 = \hat{\beta}(0)
+        \end{gather*}
+        Recordemos que $[\alpha] \ast [\beta] = [\alpha \ast \beta]$. Vamos a considerar
+        \begin{gather*}
+            \widehat{\alpha \ast \beta}(s) = \left\{
+                \begin{array}{l c c}
+                    \hat{\alpha}(2s) & \text{ si } & 0 \leq s \leq \nicefrac{1}{2}\\
+                    \hat{\alpha}(1) + \hat{\beta}(2s-1) & \text{ si } &\nicefrac{1}{2} \leq s \leq 1
+                \end{array}
+            \right.
+        \end{gather*}
+        y es claro que $\widehat{\alpha \ast \beta}$ es continua. Queremos ver que $p(\widehat{\alpha\ast \beta}) = \alpha \ast \beta$. Desarrollando tenemos 
+        \begin{align*}
+            p(\widehat{\alpha \ast \beta})(s) &= \left\{
+                \begin{array}{l c c}
+                    p(\hat{\alpha}(2s)) & \text{ si } & 0 \leq s \leq \nicefrac{1}{2}\\
+                    p(\hat{\alpha}(1) + \hat{\beta}(2s-1)) & \text{ si } &\nicefrac{1}{2} \leq s \leq 1
+                \end{array}
+            \right.\\\\
+            &= \left\{
+                \begin{array}{l c c}
+                    \alpha(2s) & \text{ si } & 0 \leq s \leq \nicefrac{1}{2}\\
+                    p(\hat{\beta}(2s-1)) & \text{ si } &\nicefrac{1}{2} \leq s \leq 1
+                \end{array}
+            \right\} = (\alpha \ast \beta)
+        \end{align*}
+        por lo que $\hat{\alpha\ast\beta}$ es un levantamiento de $\alpha \ast \beta$ con $\hat{\alpha \ast \beta}(0) = \hat{\alpha}(0)$ por lo que por definición tenemos que 
+        \begin{gather*}
+            \deg(\alpha \ast \beta) = \widehat{\alpha \ast \beta}(1) = \hat{\alpha}(1) + \hat{\beta}(1) = \deg(\alpha) + \deg(\beta)
+        \end{gather*}
+    \end{proof}
+\end{teo}
+
+\begin{observacion}
+    Algunas consecuencias elementales son las siguientes
+    \begin{itemize}
+        \item El grupo fundamental de $\bb{S}^1\times \bb{R}$ es $\bb{Z}$. De aquí se deduce que $\bb{R}^2 \setminus \{p_0\}$ no es homeomorfo a $\bb{R}^2$ ya que $\bb{R}^2 \setminus \{p_0\}$ es homeomorfo a $\bb{S}^1\times \bb{R}$ que tiene por grupo fundamental $\bb{Z}$ y $\bb{R}^2$ tiene por grupo elemental el trivial.
+        
+        \item $\bb{R}^3\setminus R$ es homeomorfo a $(\bb{R}^2 \setminus \{(0,0)\}) \times \bb{R}$ donde $R$ es una recta en $\bb{R}^3$.
+        
+        \item El grupo fundamental del toro $\bb{S}^1 \times \bb{S}^1$ o el toro de rotación de $\bb{R}^3$ es $\bb{Z}\times \bb{Z}$.
+    \end{itemize}
+\end{observacion}
+
+\begin{prop}
+    No existe ninguna aplicación continua\footnote{$\overline{\bb{D}}$ denota el disco cerrado de $\bb{R}^2$ centrado en el $(0,0)$ y con radio 1} $f : \overline{\bb{D}} \to \bb{S}^1$ tal que $f(x) = x$ para todo $x\in \bb{S}^1$
+\end{prop}
 
