--- a/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_0.tex
@@ -959,7 +959,7 @@ Que $g$ sea continua es equivalente a decir que $|g(x)| \leq k \|x\|$ para todo 
 \begin{ejercicio}
     Sean $X,Y$ espacio de Banach, $T\in L(X,Y)$ y definimos
     \begin{gather*}
-        \|y\|_n := \inf\{\|u\|_X+n \|y\|_Y: u\in X,\ v\in Y, \ y=T(u)+v\}\ \ \ \forall n \in \bb{N},\ \ \forall y \in Y
+        \|y\|_n := \inf\{\|u\|_X+n \|v\|_Y: u\in X,\ v\in Y, \ y=T(u)+v\}\ \ \ \forall n \in \bb{N},\ \ \forall y \in Y
     \end{gather*}
     Probar que $\|\cdot\|_n$ es una norma en $Y$ que verifica
     \begin{gather*}
